--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </div>
     <div class="owner">
       <center style="background-color: black; color: yellow">
-        <a href="https://github.com/farooque-Git" class="custom" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/farooque-ali-9547b2272/"
+          class="custom"
+          target="_blank"
           ><h2>Farooque Ali</h2></a
         >
       </center>
