--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           href="https://www.linkedin.com/in/farooque-ali-9547b2272/"
           class="custom"
           target="_blank"
-          ><h2>Farooque Ali</h2></a
+          ><h2>Farooque</h2></a
         >
       </center>
     </div>
